[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = [ "protocol-asset", "window-show", "window-unmaximize", "window-maximize", "window-start-dragging", "window-minimize", "window-close", "window-hide", "window-unminimize"] }
tokio = { version = "1.35.1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12.2", features = ["stream"] }
async-recursion = "1.0.5"
window-shadows = "0.2.2"
sysinfo = "0.30.5"
once_cell = "1.19.0"
textdistance = "1.0.2"
regex = "1.10.3"
directories = "5.0.1"
futures-util = "0.3.30"
zip = "0.6"
glob = "0.3.1"
rfd = "0.14.1"
image-base64 = "0.1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
